Adds autotools check for gobject-introspection.
Also organizes autotools m4 macros into 'build/autotools' folder (as copied from Clutter project :-)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,17 @@
 SUBDIRS = \
+	build \
 	evd \
 	tests
 
 DIST_SUBDIRS = \
+	build \
 	evd \
 	tests
 
 EXTRA_DIST = \
 	autogen.sh
+
+ACLOCAL_AMFLAGS = -I build/autotools
 
 CLEANFILES = *~
 
