--- a/configure.ac
+++ b/configure.ac
@@ -12,9 +12,13 @@ m4_define([evd_version],
 m4_define([evd_api_version],
           [evd_version_major.evd_version_minor])
 
-AC_INIT(EventDance, evd_version)
-AM_INIT_AUTOMAKE(evd, evd_version)
+AC_INIT([EventDance],
+	[evd_version],
+	[http://eventdance.org])
+AC_CONFIG_MACRO_DIR([build/autotools])
 AC_CONFIG_HEADERS(config.h)
+
+AM_INIT_AUTOMAKE([1.9])
 
 # Check for programs
 AC_PROG_LIBTOOL
@@ -31,17 +35,23 @@ PKG_CHECK_MODULES(GLIB, gio-2.0 >= 2.22.0
 		        gthread-2.0 >= 2.22.0
 		        gobject-2.0 >= 2.22.0)
 
+# GObject-Introspection check
+GOBJECT_INTROSPECTION_CHECK([0.6.4])
+
 # Output files
-AC_OUTPUT([Makefile
-evd/Makefile
-evd/evd.pc
-tests/Makefile
+AC_OUTPUT([
+	Makefile
+	build/Makefile
+	build/autotools/Makefile
+	evd/Makefile
+	evd/evd.pc
+	tests/Makefile
 ])
 
 echo ""
 echo "   EventDance $VERSION"
 echo "   ====================="
 echo ""
-echo "   To build the project, run \"make\""
+echo "    Build introspection data:   ${enable_introspection}"
 echo ""
 
