--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -46,7 +46,8 @@ source_h = \
 source_h_priv = \
 	evd-marshal.h \
 	evd-socket-manager.h \
-	evd-socket-protected.h
+	evd-socket-protected.h \
+	evd-socket-group-protected.h
 
 libevd_@EVD_API_VERSION@_la_LIBADD = \
 	$(GLIB_LIBS)
