Adds basic GTK-DOC support.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,10 +3,18 @@ SUBDIRS = \
 	evd \
 	tests
 
+if BUILD_GTK_DOC
+SUBDIRS += doc
+endif
+
 DIST_SUBDIRS = \
 	build \
 	evd \
 	tests
+
+if BUILD_GTK_DOC
+DIST_SUBDIRS += doc
+endif
 
 EXTRA_DIST = \
 	autogen.sh
@@ -18,7 +26,7 @@ CLEANFILES = *~
 MAINTAINERCLEANFILES = \
 	Makefile.in aclocal.m4 configure config.guess config.sub \
 	depcomp install-sh ltmain.sh missing mkinstalldirs config.h.in \
-	stamp-h.in compile
+	stamp-h.in compile gtk-doc.make
 
 DISTCLEANFILES = \
 	cscope.files cscope.out
