Adds cleaning all tmp-introspect* folders in maintainer-clean target.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -111,3 +111,6 @@ typelibs_DATA = $(BUILT_GIRSOURCES:.gir=.typelib)
 
 CLEANFILES += $(BUILT_GIRSOURCES) $(typelibs_DATA)
 endif
+
+maintainer-clean-local:
+	rm -rf tmp-introspect*
