Adds cleaning of 'doc' folder even if gtk-doc is not enabled.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,11 +10,8 @@ endif
 DIST_SUBDIRS = \
 	build \
 	evd \
-	tests
-
-if BUILD_GTK_DOC
-DIST_SUBDIRS += doc
-endif
+	tests \
+	doc
 
 EXTRA_DIST = \
 	autogen.sh
