Adds basic unit testing support, and an initial test for EvdInetSocket.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,17 +1,33 @@
 MAINTAINERCLEANFILES = \
 	Makefile.in
 
-AM_CFLAGS = $(GLIB_CFLAGS) -Wall -g3 -O0 -ggdb -DPKGDATADIR="\"$(pkgdatadir)\""
+AM_CFLAGS = \
+	$(GLIB_CFLAGS) \
+	-Wall -g3 -O0 -ggdb \
+	-DPKGDATADIR="\"$(pkgdatadir)\"" \
+	-I$(top_srcdir)/evd
 
-bin_PROGRAMS = \
+TEST_PROGS =
+
+noinst_PROGRAMS = \
+	evd-tester \
 	test-socket \
 	test-socket-context
 
 # test-socket
+evd_tester_CFLAGS = \
+	$(AM_CFLAGS)
+
+evd_tester_LDADD = \
+	$(GLIB_LIBS) \
+	$(top_srcdir)/evd/libevd-@EVD_API_VERSION@.la
+
+evd_tester_SOURCES = \
+	evd-tester.c \
+	$(TEST_PROGS)
+
+# test-socket
 test_socket_CFLAGS = \
-	-I. \
-	-I$(top_srcdir) \
-	-I$(top_srcdir)/evd \
 	$(AM_CFLAGS)
 
 test_socket_LDADD = \
@@ -23,9 +39,6 @@ test_socket_SOURCES = \
 
 # test-socket-context
 test_socket_context_CFLAGS = \
-	-I. \
-	-I$(top_srcdir) \
-	-I$(top_srcdir)/evd \
 	$(AM_CFLAGS)
 
 test_socket_context_LDADD = \
@@ -34,3 +47,8 @@ test_socket_context_LDADD = \
 
 test_socket_context_SOURCES = \
 	test-socket-context.c
+
+test: test-socket test-socket-context
+	./evd-tester
+#	./test-socket
+#	./test-socket-context
