Adds skeleton for new EvdJsonSocket class.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -36,6 +36,7 @@ source_c = \
 	evd-socket-manager.c \
 	evd-socket.c \
 	evd-json-filter.c \
+	evd-json-socket.c \
 	evd-inet-socket.c \
 	evd-socket-group.c \
 	evd-service.c \
@@ -46,6 +47,7 @@ source_h = \
 	evd-stream.h \
 	evd-socket.h \
 	evd-json-filter.h \
+	evd-json-socket.h \
 	evd-inet-socket.h \
 	evd-socket-group.h \
 	evd-service.h \
