Adds evd-utils API for miscelaneous, commonly used functions.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -31,6 +31,7 @@ lib_LTLIBRARIES = libevd-@EVD_API_VERSION@.la
 
 # libevd
 source_c = \
+	evd-utils.c \
 	evd-marshal.c \
 	evd-stream.c \
 	evd-socket-manager.c \
@@ -44,6 +45,7 @@ source_c = \
 	evd-reproxy.c
 
 source_h = \
+	evd-utils.h \
 	evd-stream.h \
 	evd-socket.h \
 	evd-json-filter.h \
