Reorganices autotools files to update introspection integration

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,4 @@
 SUBDIRS = \
-	build \
 	evd \
 	tests
 
@@ -8,15 +7,16 @@ SUBDIRS += doc
 endif
 
 DIST_SUBDIRS = \
-	build \
 	evd \
 	tests \
 	doc
 
 EXTRA_DIST = \
-	autogen.sh
+	autogen.sh \
+	m4/introspection.m4
 
-ACLOCAL_AMFLAGS = -I build/autotools
+ACLOCAL_AMFLAGS = -I m4
+DISTCHECK_CONFIGURE_FLAGS = --enable-introspection
 
 CLEANFILES = *~
 
