Adds new abstract class EvdSocketStream specializing EvdStream
This new type of stream will have socket specific data that is currently in EvdStream.
EvdSocket and EvdSocketGroup now inherit from it. This change normalizes arquitecture for a
future introduction of EvdFileStream (not decided yet).

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -30,6 +30,7 @@ source_c = \
 	evd-utils.c \
 	evd-marshal.c \
 	evd-stream.c \
+	evd-socket-stream.c \
 	evd-socket-manager.c \
 	evd-resolver-request.c \
 	evd-resolver.c \
@@ -49,6 +50,7 @@ source_h = \
 	evd.h \
 	evd-utils.h \
 	evd-stream.h \
+	evd-socket-stream.h \
 	evd-resolver-request.h \
 	evd-resolver.h \
 	evd-socket.h \
