Adds new class EvdBufferedInputStream inheriting GBufferedInputStream

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -39,6 +39,7 @@ source_c = \
 	evd-tls-input-stream.c \
 	evd-tls-output-stream.c \
 	evd-stream-throttle.c \
+	evd-buffered-input-stream.c \
 	evd-json-filter.c \
 	evd-json-socket.c \
 	evd-socket-group.c \
@@ -63,6 +64,7 @@ source_h = \
 	evd-tls-input-stream.h \
 	evd-tls-output-stream.h \
 	evd-stream-throttle.h \
+	evd-buffered-input-stream.h \
 	evd-json-filter.h \
 	evd-json-socket.h \
 	evd-socket-group.h \
