Adds new class EvdThrottledInputStream inheriting GFilterInputStream

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -41,6 +41,7 @@ source_c = \
 	evd-stream-throttle.c \
 	evd-buffered-input-stream.c \
 	evd-buffered-output-stream.c \
+	evd-throttled-input-stream.c \
 	evd-json-filter.c \
 	evd-json-socket.c \
 	evd-socket-group.c \
@@ -67,6 +68,7 @@ source_h = \
 	evd-stream-throttle.h \
 	evd-buffered-input-stream.h \
 	evd-buffered-output-stream.h \
+	evd-throttled-input-stream.h \
 	evd-json-filter.h \
 	evd-json-socket.h \
 	evd-socket-group.h \
