Adds new class EvdConnection
to move into all streaming and TLS related code from EvdSocket.

--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -53,7 +53,8 @@ source_c = \
 	evd-tls-dh-generator.c \
 	evd-tls-session.c \
 	evd-tls-certificate.c \
-	evd-tls-credentials.c
+	evd-tls-credentials.c \
+	evd-connection.c
 
 source_h = \
 	evd.h \
@@ -78,7 +79,8 @@ source_h = \
 	evd-reproxy.h \
 	evd-tls-session.h \
 	evd-tls-certificate.h \
-	evd-tls-credentials.h
+	evd-tls-credentials.h \
+	evd-connection.h
 
 source_h_priv = \
 	evd-marshal.h \
