--- a/evd/Makefile.am
+++ b/evd/Makefile.am
@@ -54,7 +54,8 @@ source_c = \
 	evd-tls-session.c \
 	evd-tls-certificate.c \
 	evd-tls-credentials.c \
-	evd-connection.c
+	evd-connection.c \
+	evd-connection-group.c
 
 source_h = \
 	evd.h \
@@ -80,7 +81,8 @@ source_h = \
 	evd-tls-session.h \
 	evd-tls-certificate.h \
 	evd-tls-credentials.h \
-	evd-connection.h
+	evd-connection.h \
+	evd-connection-group.h
 
 source_h_priv = \
 	evd-marshal.h \
